# simple-log

./: CMakeLists.txt  Log.cpp  Log.h  LogLevel.h  LogWriter.cpp  LogWriter.h  stringify.h
tests/: CMakeLists.txt  compile_test.cpp  simple_test.cpp  test_runner.cpp
